<resources>
    <string name="app_name">Pizza Order</string>
    <string name="name">Name</string>
    <string name="action_settings">Settings</string>
    <string name="quantity">"Quantity: "</string>
    <string name="toppings">Toppings</string>
    <string name="extra_cheese">"Extra Cheese  50¢"</string>
    <string name="bacon">"Bacon and Ham      70¢"</string>
    <string name="avo">Avo and Peppers    30¢  </string>
    <string name="five_sausages">Russian, boerewors, cheese grillers, Franks and chicken sausages   150¢</string>
    <string name="initial_price">Price: $0.00</string>
    <string name="order">Order</string>
    <string name="email_summary">Email Order\nSummary</string>
    <string name="email_subject">"Pizza Order for "</string>
    <string name="done">Done!</string>
    <string name="price">Price</string>
    <string name="fifty_pizzas">"You can't have more than 50 pizzas. Seriously, you've got a problem."</string>
    <string name="negative_pizzas">"You can't have negative pizzas!"</string>
    <string name="name_required">Name field required</string>
    <string name="with_extra_cheese">With extra cheese</string>
    <string name="with_bacon">With bacon and ham</string>
    <string name="with_avo">With Avo and Peppers</string>
    <string name="with_five_sausages">With 5 Sausages</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank you!</string>
    <string name="make_selection">You have to make a selection first</string>
    </resources>
